added notes for module 5 of course 3

--- a/C3-L02-Ex2.qmd
+++ b/C3-L02-Ex2.qmd
@@ -30,6 +30,11 @@ In order to characterize the distribution of the lifetimes, it seems reasonable 
 
 ```{r}
 #| label: lbl-load-data
+
+## Clear the environment and load required libraries
+rm(list=ls())
+set.seed(81196)    # So that results are reproducible (same simulated data every time)
+
 # Load the data
 fuses <- read.csv("data/fuses.csv",header=FALSE)
 x <- fuses$V1
