--- a/c03-mixtures/m2-em/em-2-norm-mix/index.qmd
+++ b/c03-mixtures/m2-em/em-2-norm-mix/index.qmd
@@ -44,7 +44,7 @@ n  = 120         # Number of observations to be generated
 
 # simulate the component indicator items
 cc = sample(1:KK, n, replace=T, prob=c(w.true,1-w.true))
-x  = rep(0, n) # intialize the data vector x
+x  = rep(0, n) # initialize the data vector x
 for(i in 1:n){
   # sample from a distribution selected by component indicator
   x[i] = rnorm(1, mu.true[cc[i]], sigma.true)
