--- a/references.bib
+++ b/references.bib
@@ -1036,3 +1036,15 @@ note = "Accessed 11/02/16",
 	doi = {10.2307/1268249},
 	url = {http://dx.doi.org/10.2307/1268249}
 }
+
+
+@article{dempster1977maximum,
+  title={Maximum likelihood from incomplete data via the EM algorithm},
+  author={Dempster, Arthur P and Laird, Nan M and Rubin, Donald B},
+  journal={Journal of the royal statistical society: series B (methodological)},
+  volume={39},
+  number={1},
+  pages={1--22},
+  year={1977},
+  publisher={Wiley Online Library}
+}
