added notes for module 5 of course 3

--- a/C3-L02-Ex2.qmd
+++ b/C3-L02-Ex2.qmd
@@ -19,6 +19,12 @@ Data on the lifetime (in years) of fuses produced by the ACME Corporation is ava
 In order to characterize the distribution of the lifetimes, it seems reasonable to fit to the data a two-component mixture of the form:
 
 
+$$
+f(x)=wλexp{−λx}+(1−w) \frac{1}{\sqrt{2\pi}\tau x} \exp{− \frac{(log(x)−μ)^{2}}{2τ^{2}}}, \quad x > 0.
+$$ {#eq-mixture}
+
+where $w$ is the weight associated with the exponential distribution, $\lambda$ is the rate of the exponential distribution, and $\text{LN}(\mu, \tau)$ is a log-normal distribution with mean $\mu$ and standard deviation $\tau$.
+
 
 
 - Modify code to Generate n observations from a mixture of two Gaussian # distributions into code to sample 100 random numbers from a mixture of 4 exponential distributions with means 1, 4, 7 and 10 and weights 0.3, 0.25, 0.25 and 0.2, respectively. 
@@ -39,6 +45,16 @@ set.seed(81196)    # So that results are reproducible (same simulated data every
 fuses <- read.csv("data/fuses.csv",header=FALSE)
 x <- fuses$V1
 n <- length(x) # Number of observations
+
+# how many rows in the data
+nrow(fuses)
+# how many zeros in x
+sum(x==0)
+# almost half of the data is zeros!
+
+par(mfrow=c(1,1))
+xx.true = seq(0, max(x), by=1)
+hist(x, freq=FALSE, xlab="Fuses", ylab="Density", main="Empirical distribution of fuses failure times")
 ```
 
 ```{r}
