--- a/C3-L05.qmd
+++ b/C3-L05.qmd
@@ -6,6 +6,10 @@ categories:
 keywords:
   - Mixture Models
   - Maximum Likelihood Estimation
+  - BIC 
+  - Bayesian Information Criteria
+  - Multimodality
+  - Numerical Instability
   - notes
 ---
 
@@ -13,8 +17,13 @@ keywords:
 
 ## Computational Considerations
 
+![Computational Considerations](images/c3l5-ss-01-numerical-stability.png){.column-margin}
+
 ### Numerical stability
 
+The issue is in how the computer represents numbers. The computer uses a finite number of bits to represent numbers, which can lead to numerical instability when performing calculations that involve very large or very small numbers. This can result in loss of precision and incorrect results. 
+
+The solution is to use logarithmic transformations to avoid numerical instability. By taking the logarithm of the numbers, we can work with smaller and more manageable values, which reduces the risk of numerical instability.
 
 ### Sample code to illustrate numerical stability issues
 
@@ -67,6 +76,9 @@ exp(lz1-b)/(exp(lz1-b) + exp(lz2-b))
 ```
 
 ### Computational issues associated with multimodality
+
+
+![multimodality issues](images/c3l5-ss-02-multimodality.png){.column-margin}
 
 ### Sample code to illustrate multimodality issues 1
 
@@ -319,13 +331,16 @@ QQn
 
 ```
 
-
-
 ### Computational considerations for Mixture Models
 
 ## Determining the number of components
 
 ### Bayesian Information Criteria (BIC)
+
+
+![BIC](images/c3l5-ss-03-BIC.png){.column-margin}
+
+![BIC](images/c3l5-ss-04-BIC.png){.column-margin}
 
 ### HW Bayesian Information Criteria (BIC) 
 
@@ -334,6 +349,8 @@ QQn
 ### Sample code: Bayesian Information Criteria
 
 ```{r}
+#| label: lst-bayesian-information-criteria
+
 ## Illustrating the use of BIC to estimate the number of components of a Mixture Model
 ## using the galaxies dataset
 rm(list=ls())
@@ -487,6 +504,12 @@ abline(v=6, lty=3)
 
 ### Estimating the number of components in Bayesian settings
 
+
+![Estimating the number of components](images/c3l5-ss-05-estimating-number-of-components.png){.column-margin}
+
+![Estimating the number of components](images/c3l5-ss-06-estimating-number-of-components.png){.column-margin}
+
+
 ### Bayesian Information Criteria (BIC) for Mixture Models
 
 ### HW - Estimating the number of components in Bayesian settings
@@ -500,6 +523,7 @@ abline(v=6, lty=3)
 ### Sample code for estimating the number of components and the partition structure in Bayesian models
 
 ```{r}
+#| label: lst-estimating-number-of-components-and-partition-structure
 ## Full Bayesian estimation of a mixture model for density estimation in the galaxies dataset
 rm(list=ls())
 
