extracting math from official notes! :-0...

--- a/C3-L04-Ex2.qmd
+++ b/C3-L04-Ex2.qmd
@@ -105,7 +105,7 @@ n = length(x)
 set.seed(781209)
 
 
-## Emprical Bayes approach to select the hyperparameters
+## Empirical Bayes approach to select the hyperparameters
 
 eta = mean(x)          # Mean of the data
 tau2 = var(x)          # Variance of the data
@@ -157,7 +157,6 @@ for(s in 1:iterations){
   # this is equivalent to the more general
   w = as.vector(rdirichlet(1, aa + tabulate(cc, nbins=KK)))
   # and both give a uniform distribution for the weights
-
 
   # Sample means and variances
   for(k in 1:KK){
@@ -225,7 +224,7 @@ legend("topright", c("MCMC mean", "95% band", "KDE"),
 
 ```
 
-::: {.callout-note collapse="True"}
+::: {.callout-note collapse="true"}
 
 ## solution code from the course
 
@@ -332,4 +331,5 @@ lines(xx, density.mcmc.m, col="black", lwd=2)
 points(x, rep(0,n))
 
 ```
+
 :::
